target/scala-2.12/src_managed/main/src/main/mc/parser/MCParser.java
// Generated from src/main/mc/parser/MC.g4 by ANTLR 4.6

	package mc.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, ADDOP=2, SUBOP=3, MULOP=4, DIVOP=5, NOTOP=6, MODULOP=7, OROP=8, 
		ANDOP=9, NEQ=10, EQ=11, LT=12, GT=13, LTQ=14, GTQ=15, ASSIGN=16, BOOLIT=17, 
		BOOLTYPE=18, BREAKTYPE=19, CONTINUETYPE=20, ELSETYPE=21, FORTYPE=22, FLOATTYPE=23, 
		IFTYPE=24, INTTYPE=25, RETURNTYPE=26, VOIDTYPE=27, DOTYPE=28, WHILETYPE=29, 
		TRUETYPE=30, FALSETYPE=31, STRINGTYPE=32, LB=33, RB=34, LP=35, RP=36, 
		LSB=37, RSB=38, SEMI=39, COMMA=40, INTLIT=41, ID=42, WS=43, FLOATLIT=44, 
		ILLEGAL_ESCAPE=45, UNCLOSE_STRING=46, ERROR_CHAR=47, STRINGLIT=48;
	public static final int
		RULE_program = 0, RULE_declarations = 1, RULE_variabledeclarations = 2, 
		RULE_primitivetype = 3, RULE_variable = 4, RULE_manyvariable = 5, RULE_functiondeclarations = 6, 
		RULE_type = 7, RULE_arraypointtype = 8, RULE_inputpara = 9, RULE_outputpara = 10, 
		RULE_funtionname = 11, RULE_parameterlist = 12, RULE_parameterdeclaration = 13, 
		RULE_blockstatement = 14, RULE_expressionstatement = 15, RULE_statementpart = 16, 
		RULE_ifstatement = 17, RULE_dowhilestatement = 18, RULE_forstatement = 19, 
		RULE_breakstatement = 20, RULE_continuestatement = 21, RULE_returnstatement = 22, 
		RULE_functioncall = 23, RULE_list_expression = 24, RULE_expression = 25, 
		RULE_expression1 = 26, RULE_expression2 = 27, RULE_expression3 = 28, RULE_expression4 = 29, 
		RULE_expression5 = 30, RULE_expression6 = 31, RULE_expression7 = 32, RULE_expression8 = 33, 
		RULE_expression9 = 34;
	public static final String[] ruleNames = {
		"program", "declarations", "variabledeclarations", "primitivetype", "variable", 
		"manyvariable", "functiondeclarations", "type", "arraypointtype", "inputpara", 
		"outputpara", "funtionname", "parameterlist", "parameterdeclaration", 
		"blockstatement", "expressionstatement", "statementpart", "ifstatement", 
		"dowhilestatement", "forstatement", "breakstatement", "continuestatement", 
		"returnstatement", "functioncall", "list_expression", "expression", "expression1", 
		"expression2", "expression3", "expression4", "expression5", "expression6", 
		"expression7", "expression8", "expression9"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'+'", "'-'", "'*'", "'/'", "'!'", "'%'", "'||'", "'&&'", 
		"'!='", "'=='", "'<'", "'>'", "'<='", "'>='", "'='", null, "'boolean'", 
		"'break'", "'continue'", "'else'", "'for'", "'float'", "'if'", "'int'", 
		"'return'", "'void'", "'do'", "'while'", "'true'", "'false'", "'string'", 
		"'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "COMMENT", "ADDOP", "SUBOP", "MULOP", "DIVOP", "NOTOP", "MODULOP", 
		"OROP", "ANDOP", "NEQ", "EQ", "LT", "GT", "LTQ", "GTQ", "ASSIGN", "BOOLIT", 
		"BOOLTYPE", "BREAKTYPE", "CONTINUETYPE", "ELSETYPE", "FORTYPE", "FLOATTYPE", 
		"IFTYPE", "INTTYPE", "RETURNTYPE", "VOIDTYPE", "DOTYPE", "WHILETYPE", 
		"TRUETYPE", "FALSETYPE", "STRINGTYPE", "LB", "RB", "LP", "RP", "LSB", 
		"RSB", "SEMI", "COMMA", "INTLIT", "ID", "WS", "FLOATLIT", "ILLEGAL_ESCAPE", 
		"UNCLOSE_STRING", "ERROR_CHAR", "STRINGLIT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MCParser.EOF, 0); }
		public List<DeclarationsContext> declarations() {
			return getRuleContexts(DeclarationsContext.class);
		}
		public DeclarationsContext declarations(int i) {
			return getRuleContext(DeclarationsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70);
				declarations();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLTYPE) | (1L << FLOATTYPE) | (1L << INTTYPE) | (1L << VOIDTYPE) | (1L << STRINGTYPE))) != 0) );
			setState(75);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public VariabledeclarationsContext variabledeclarations() {
			return getRuleContext(VariabledeclarationsContext.class,0);
		}
		public FunctiondeclarationsContext functiondeclarations() {
			return getRuleContext(FunctiondeclarationsContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(77);
				variabledeclarations();
				}
				break;
			case 2:
				{
				setState(78);
				functiondeclarations();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariabledeclarationsContext extends ParserRuleContext {
		public PrimitivetypeContext primitivetype() {
			return getRuleContext(PrimitivetypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MCParser.SEMI, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ManyvariableContext manyvariable() {
			return getRuleContext(ManyvariableContext.class,0);
		}
		public VariabledeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variabledeclarations; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitVariabledeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariabledeclarationsContext variabledeclarations() throws RecognitionException {
		VariabledeclarationsContext _localctx = new VariabledeclarationsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variabledeclarations);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			primitivetype();
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(82);
				variable();
				}
				break;
			case 2:
				{
				setState(83);
				manyvariable();
				}
				break;
			}
			setState(86);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitivetypeContext extends ParserRuleContext {
		public TerminalNode INTTYPE() { return getToken(MCParser.INTTYPE, 0); }
		public TerminalNode FLOATTYPE() { return getToken(MCParser.FLOATTYPE, 0); }
		public TerminalNode STRINGTYPE() { return getToken(MCParser.STRINGTYPE, 0); }
		public TerminalNode BOOLTYPE() { return getToken(MCParser.BOOLTYPE, 0); }
		public PrimitivetypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitivetype; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitPrimitivetype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitivetypeContext primitivetype() throws RecognitionException {
		PrimitivetypeContext _localctx = new PrimitivetypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_primitivetype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLTYPE) | (1L << FLOATTYPE) | (1L << INTTYPE) | (1L << STRINGTYPE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MCParser.ID, 0); }
		public TerminalNode INTLIT() { return getToken(MCParser.INTLIT, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(ID);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LSB) {
				{
				setState(91);
				match(LSB);
				setState(92);
				match(INTLIT);
				setState(93);
				match(RSB);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ManyvariableContext extends ParserRuleContext {
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MCParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MCParser.COMMA, i);
		}
		public ManyvariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_manyvariable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitManyvariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ManyvariableContext manyvariable() throws RecognitionException {
		ManyvariableContext _localctx = new ManyvariableContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_manyvariable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			variable();
			setState(99); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(97);
				match(COMMA);
				setState(98);
				variable();
				}
				}
				setState(101); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==COMMA );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctiondeclarationsContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FuntionnameContext funtionname() {
			return getRuleContext(FuntionnameContext.class,0);
		}
		public TerminalNode LB() { return getToken(MCParser.LB, 0); }
		public ParameterlistContext parameterlist() {
			return getRuleContext(ParameterlistContext.class,0);
		}
		public TerminalNode RB() { return getToken(MCParser.RB, 0); }
		public BlockstatementContext blockstatement() {
			return getRuleContext(BlockstatementContext.class,0);
		}
		public FunctiondeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functiondeclarations; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitFunctiondeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctiondeclarationsContext functiondeclarations() throws RecognitionException {
		FunctiondeclarationsContext _localctx = new FunctiondeclarationsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functiondeclarations);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			type();
			setState(104);
			funtionname();
			setState(105);
			match(LB);
			setState(106);
			parameterlist();
			setState(107);
			match(RB);
			setState(108);
			blockstatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public PrimitivetypeContext primitivetype() {
			return getRuleContext(PrimitivetypeContext.class,0);
		}
		public TerminalNode VOIDTYPE() { return getToken(MCParser.VOIDTYPE, 0); }
		public OutputparaContext outputpara() {
			return getRuleContext(OutputparaContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(110);
				primitivetype();
				}
				break;
			case 2:
				{
				setState(111);
				match(VOIDTYPE);
				}
				break;
			case 3:
				{
				setState(112);
				outputpara();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArraypointtypeContext extends ParserRuleContext {
		public InputparaContext inputpara() {
			return getRuleContext(InputparaContext.class,0);
		}
		public OutputparaContext outputpara() {
			return getRuleContext(OutputparaContext.class,0);
		}
		public ArraypointtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arraypointtype; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitArraypointtype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArraypointtypeContext arraypointtype() throws RecognitionException {
		ArraypointtypeContext _localctx = new ArraypointtypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arraypointtype);
		try {
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				inputpara();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				outputpara();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputparaContext extends ParserRuleContext {
		public PrimitivetypeContext primitivetype() {
			return getRuleContext(PrimitivetypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MCParser.ID, 0); }
		public TerminalNode LSB() { return getToken(MCParser.LSB, 0); }
		public TerminalNode RSB() { return getToken(MCParser.RSB, 0); }
		public InputparaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputpara; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitInputpara(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputparaContext inputpara() throws RecognitionException {
		InputparaContext _localctx = new InputparaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_inputpara);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			primitivetype();
			setState(120);
			match(ID);
			setState(121);
			match(LSB);
			setState(122);
			match(RSB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputparaContext extends ParserRuleContext {
		public PrimitivetypeContext primitivetype() {
			return getRuleContext(PrimitivetypeContext.class,0);
		}
		public TerminalNode LSB() { return getToken(MCParser.LSB, 0); }
		public TerminalNode RSB() { return getToken(MCParser.RSB, 0); }
		public OutputparaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputpara; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitOutputpara(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutputparaContext outputpara() throws RecognitionException {
		OutputparaContext _localctx = new OutputparaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_outputpara);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			primitivetype();
			setState(125);
			match(LSB);
			setState(126);
			match(RSB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuntionnameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MCParser.ID, 0); }
		public FuntionnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funtionname; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitFuntionname(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuntionnameContext funtionname() throws RecognitionException {
		FuntionnameContext _localctx = new FuntionnameContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_funtionname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterlistContext extends ParserRuleContext {
		public List<ParameterdeclarationContext> parameterdeclaration() {
			return getRuleContexts(ParameterdeclarationContext.class);
		}
		public ParameterdeclarationContext parameterdeclaration(int i) {
			return getRuleContext(ParameterdeclarationContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MCParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MCParser.COMMA, i);
		}
		public ParameterlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterlist; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitParameterlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterlistContext parameterlist() throws RecognitionException {
		ParameterlistContext _localctx = new ParameterlistContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_parameterlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLTYPE) | (1L << FLOATTYPE) | (1L << INTTYPE) | (1L << STRINGTYPE))) != 0)) {
				{
				setState(130);
				parameterdeclaration();
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(131);
					match(COMMA);
					setState(132);
					parameterdeclaration();
					}
					}
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterdeclarationContext extends ParserRuleContext {
		public PrimitivetypeContext primitivetype() {
			return getRuleContext(PrimitivetypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(MCParser.ID, 0); }
		public TerminalNode LSB() { return getToken(MCParser.LSB, 0); }
		public TerminalNode RSB() { return getToken(MCParser.RSB, 0); }
		public ParameterdeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterdeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MCVisitor ) return ((MCVisitor<? extends T>)visitor).visitParameterdeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterdeclarationContext parameterdeclaration() throws RecognitionException {
		ParameterdeclarationContext _localctx = new ParameterdeclarationContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_parameterdeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			primitivetype();
			setState(141);
			match(ID);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LSB) {
				{
				setState(142);
				match(LSB);
				setState(143);
				match(RSB);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
